--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "express-session": "^1.17.1",
+    "body-parser": "^1.19.0"
   },
   "engines": {
     "node": "10.x"
