--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "sqlite3": "^4.1.1",
     "express-session": "^1.17.1",
-    "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "eta": "^1.11.0"
   },
   "engines": {
     "node": "10.x"
